added qdrant skel + some plans for new message handler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./mongodb_data:/data/db
     command: --quiet
-  admin:
+  api:
     build:
       dockerfile: api.dockerfile
     env_file:
